# nunet-invoice-generator

./: .gitignore  README.md  config.yml.dist  convert-html-to-pdf.sh  main.py  pyproject.toml  style.css
templates/: fiat.j2  macros.j2  token.j2
